# hrcn_gui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/gui_demo/: CMakeLists.txt
examples/gui_demo/components/: checkbox.cpp  checkbox.h  combobox.cpp  combobox.h
examples/gui_demo/src/: gui.cpp  gui.h  main.cpp
src/base/: allocator.cpp  allocator.h  app.cpp  app.hpp  app_context.cpp  app_context.hpp  base.hpp  c_event_listener.cpp  c_event_listener.h  effect.cpp  effect.hpp  event_listener.cpp  event_listener.hpp  font.cpp  font.hpp  font_face.cpp  font_face.hpp  input_context.cpp  input_context.hpp  keyboard_event.hpp  mouse_event.hpp  node.cpp  node.hpp  node_event.hpp  scroll_event.hpp  secure_string.hpp  state.cpp  state.hpp  yg_enums.hpp
src/base/events/: key_down_event.cpp  key_down_event.hpp  key_up_event.cpp  key_up_event.hpp  mouse_down_event.cpp  mouse_down_event.hpp  mouse_enter_event.cpp  mouse_enter_event.hpp  mouse_exit_event.cpp  mouse_exit_event.hpp  mouse_move_event.cpp  mouse_move_event.hpp  mouse_scroll_event.cpp  mouse_scroll_event.hpp  mouse_up_event.cpp  mouse_up_event.hpp  types.hpp
src/base/style/: color.cpp  color.hpp  style_manager.cpp  style_manager.hpp
src/base/transitions/: transition.cpp  transition.hpp  transition_background_color.cpp  transition_background_color.hpp  transition_border_color.cpp  transition_border_color.hpp  transition_margin.cpp  transition_margin.hpp  transition_position.cpp  transition_position.hpp  transitions_manager.cpp  transitions_manager.hpp  types.hpp
src/components/: c_text.cpp  c_text.hpp  navbar.cpp  navbar.hpp  navbutton.cpp  navbutton.h  window.cpp  window.hpp
src/utils/: fnvhash.hpp  path_generator.hpp
